[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pdf-classification-engine"
version = "0.1.0"
description = "PDF discipline classification engine for construction drawing plan sets"
requires-python = ">=3.10"
dependencies = [
    "PyMuPDF>=1.23.0",
    "openai>=1.0.0",
    "anthropic>=0.20.0",
    "Pillow>=10.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/plan_classification"]
